services/echo-ci-cd/uat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-ci-cd--uat
spec:
  selector:
    matchLabels:
      app: echo-ci-cd--uat
  replicas: 1
  template:
    metadata:
      labels:
        app: echo-ci-cd--uat
      annotations:
        'consul.hashicorp.com/connect-inject': 'true'
    spec:
      containers:
      - name: echo-ci-cd--uat
        image: efishery.azurecr.io/echo-ci-cd--uat:1
        ports:
        - containerPort: 8080
