services/echo-ci-cd/uat/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo-ci-cd--uat
  name: echo-ci-cd--uat
  namespace: uat
spec:
  selector:
    app: echo-ci-cd--uat
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
